fixed a shift of text in "about-us" section

--- a/react-exam-app/src/pages/LandingPage/AboutUsSection/TabsContent/styles.scss
+++ b/react-exam-app/src/pages/LandingPage/AboutUsSection/TabsContent/styles.scss
@@ -6,9 +6,9 @@
   min-height: 250px;
 
   &__desc {
+    max-width: 250px;
     width: 100%;
     text-transform: uppercase;
-    margin-right: 24px;
     margin-bottom: 16px;
   }
 
